@@ -33,13 +33,23 @@ class EmailNotificationTest extends MediaWikiIntegrationTestCase {
 
 		// Alice edits the page (doesn't actually have to edit in this test).
 		// Bob (as in, not Alice) should have received an email notification.
-		$notifyArgs = [ $alice, $title, '20200624000000', '', false ];
-		$sent = $this->emailNotification->notifyOnPageChange( ...$notifyArgs );
+		$row = (object)[
+			'rc_timestamp' => '20200624000000',
+			'rc_comment' => '',
+			'rc_minor' => false,
+
+			'rc_deleted' => false,
+			'rc_last_oldid' => false,
+			'rc_user' => $alice->getId(),
+		];
+		$rc = @RecentChange::newFromRow( $row );
+
+		$sent = $this->emailNotification->notifyOnPageChange( $alice, $title, $rc );
 		static::assertTrue( $sent );
 
 		// Alice edits again, but Bob shouldn't be notified again
 		// (only one email until Bob visits the page again).
-		$sent = $this->emailNotification->notifyOnPageChange( ...$notifyArgs );
+		$sent = $this->emailNotification->notifyOnPageChange( $alice, $title, $rc );
 		static::assertFalse( $sent );
 
 		// Reset notification timestamp, simulating that Bob visited the page.
@@ -50,7 +60,7 @@ class EmailNotificationTest extends MediaWikiIntegrationTestCase {
 		$store->addWatch( $bob, $title, '20060123000000' );
 
 		// Alice edits again, email should not be sent.
-		$sent = $this->emailNotification->notifyOnPageChange( ...$notifyArgs );
+		$sent = $this->emailNotification->notifyOnPageChange( $alice, $title, $rc );
 		static::assertFalse( $sent );
 	}
 }
