@@ -337,6 +337,9 @@ because of Phabricator reports.
 * Callbacks registered by MessageCacheFetchOverrides handlers will now be
   called with only two parameters. The $language and $useDB parameter will not
   be passed.
+* Removed $timestamp, $summary, $minorEdit, $oldid and $pageStatus params from
+  EmailNotification::notifyOnPageChange(). Now this method takes RecentChange
+  instead.
 * …
 
 === Deprecations in 1.44 ===
